--- a/data preprocessing/dctsubject+dcsubejct.ipynb
+++ b/data preprocessing/dctsubject+dcsubejct.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.chdir(\"/Users/dongxinyuan/Desktop/datapretest\")"
+    "os.chdir(\"path to dctsubject_count.csv and dcsubject_count.csv")"
    ]
   },
   {
